fix css on mobile header

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -46,11 +46,12 @@
 	.carousel-inner {
 		height: 100%;
 	}
+	
 	.carousel-caption {
 		width: 100%;
 		left: 0;
 		right: 0;
-		top: 100px;
+		top: 40%;
 		bottom: 0;
 	}
 	.item {
